--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@types/node": "^16.11.6",
     "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.33",
-    "eslint": "8.1.0",
+    "eslint": "^8.3.0",
     "eslint-config-next": "11.1.2",
     "typescript": "^4.4.4"
   }
